Ajout plus flexibité pour la vérification par nom, plus de version collector, ajout certificat ssl